[package]
name = "third_party_reporting"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
blstrs = "0.7.1"
subtle = "2.6"
serde = "1.0.219"
aes-gcm = "0.10.3"
bincode = "1.3.3"
hmac = "0.12.1"
digest = "0.10.7"
rand_core = "0.5"
sha2 = "0.10"
curve25519-dalek = { version = "4.1.3", features = ['precomputed-tables', 'alloc', 'zeroize', 'rand_core', 'digest', 'group'] }
rand = "0.8.5"
sha3 = "0.10.8"
generic-array = "1.0.0"
lazy_static = "1.4.0"
crypto_box = { version = "0.9.1", features = ["seal"] }
typenum = "1.17.0"
criterion = { version = "0.4.0", features = ["html_reports"] }
clap = { version = "4.5.27", features = ["derive"] }
blst = "0.3.13"
ff = "0.13.0"
group = "0.13.0"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
getrandom = "0.3"
gnuplot = "0.0.45"


[[bench]]
name = "basic_platform_setup"
harness = false


[[bench]]
name = "basic_send"
harness = false

[[bench]]
name = "basic_process"
harness = false

[[bench]]
name = "basic_read"
harness = false

[[bench]]
name = "basic_report"
harness = false

[[bench]]
name = "basic_moderate"
harness = false

[[bench]]
name = "mod_priv_platform_setup"
harness = false

[[bench]]
name = "mod_priv_mod_setup"
harness = false

[[bench]]
name = "mod_priv_send"
harness = false

[[bench]]
name = "mod_priv_process"
harness = false

[[bench]]
name = "mod_priv_read"
harness = false

[[bench]]
name = "mod_priv_report"
harness = false

[[bench]]
name = "mod_priv_moderate"
harness = false

[[bench]]
name = "const_mod_priv_platform_setup"
harness = false

[[bench]]
name = "const_mod_priv_mod_setup"
harness = false

[[bench]]
name = "const_mod_priv_send"
harness = false

[[bench]]
name = "const_mod_priv_process"
harness = false

[[bench]]
name = "const_mod_priv_read"
harness = false

[[bench]]
name = "const_mod_priv_report"
harness = false

[[bench]]
name = "const_mod_priv_moderate"
harness = false

[[bench]]
name = "gamal_bench"
harness = false

[[bench]]
name = "hmac_bench"
harness = false

[[bench]]
name = "plain_send"
harness = false

[[bench]]
name = "plain_process"
harness = false

[[bench]]
name = "plain_read"
harness = false

[[bench]]
name = "plain_moderate"
harness = false
